--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Dist-Zilla-Author-SHARYANTO-MetaResources
 
-0.01     2013-11-05 (SHARYANTO) (not yet released)
+0.01     2013-11-05 (SHARYANTO)
 
          - First release.
