--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-Author-PERLANCAR-MetaResources
 
+0.02     2014-08-26 (PERLANCAR)
+
+         - Rename dist.
+
+
 0.01     2013-11-05 (SHARYANTO)
 
          - First release.
