--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PERLANCAR-MetaResources
 
+0.03     2014-08-26 (PERLANCAR)
+
+         - Rename dist again (drop the Author- part).
+
+
 0.02     2014-08-26 (PERLANCAR)
 
          - Rename dist.
