--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.040   2018-09-08 (PERLANCAR)
+
+	- [bugfix] Fix checking of GitHub URL in .git/config.
+
+
 0.03     2014-08-26 (PERLANCAR)
 
          - Rename dist again (drop the Author- part).
